--- a/roles/agregate/tasks/main.yaml
+++ b/roles/agregate/tasks/main.yaml
@@ -4,6 +4,12 @@
     list_sections: "{{ list_sections + hostvars[item]['list_sections'] }}"
   with_items: "{{ groups['all'] }}"
 
+- name: ansible copy file from remote to local.
+  fetch:
+    src: /tmp/efficiencie.exec.txt
+    dest: /tmp/
+    flat: yes
+
 - name: Result all efficience tests
   ansible.builtin.debug: 
     msg: "{{ q('ansible.builtin.ini', '.*', section=item, file='/tmp/efficiencie.exec.txt', re=True) }} "
